# bsc

./: README.md
clang/: CMakeLists.txt
clang-tools-extra/clang-doc/: Generators.cpp  YAMLGenerator.cpp
clang-tools-extra/clang-tidy/: CMakeLists.txt  ClangTidy.cpp  ClangTidy.h  ClangTidyForceLinker.h
clang-tools-extra/clang-tidy/bsc/: AccessSpecificTypeCheck.cpp  AccessSpecificTypeCheck.h  AddNewFieldCheck.cpp  AddNewFieldCheck.h  BSCTidyModule.cpp  CMakeLists.txt  ExplicitCastCheck.cpp  ExplicitCastCheck.h
clang-tools-extra/clang-tidy/tool/: ClangTidyMain.cpp
clang-tools-extra/clangd/: XRefs.cpp
clang-tools-extra/clangd/refactor/: Rename.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: CMakeLists.txt
clang/docs/BSC/: BiShengCLanguageUserManual.md
clang/lib/AST/: ASTContext.cpp  ASTDiagnostic.cpp  ASTDumper.cpp  ASTImporter.cpp  ASTStructuralEquivalence.cpp  CMakeLists.txt  Comment.cpp  Decl.cpp  DeclBase.cpp  DeclCXX.cpp  DeclPrinter.cpp  DeclTemplate.cpp  DeclarationName.cpp  Expr.cpp  ExprClassification.cpp  Mangle.cpp  (+14 more)
clang/test/: lit.cfg.py
libcbs/: CMakeLists.txt  README.md
libcbs/cmake/modules/: LLVMLibCBSRules.cmake  LLVMLibCBSTargetNameUtils.cmake  LLVMLibCBSTestRules.cmake
libcbs/src/: CMakeLists.txt
libcbs/src/bishengc_safety/: bishengc_safety.cbs  bishengc_safety.hbs
libcbs/src/cell/: cell.hbs
libcbs/src/hash/: sip.cbs  sip.hbs
libcbs/src/list/: list.hbs
libcbs/src/map/: hash_map.hbs
libcbs/src/option/: option.hbs
libcbs/src/raw_table/: raw_table.cbs  raw_table.hbs
libcbs/src/rc/: rc.hbs
libcbs/src/result/: result.hbs
libcbs/src/scheduler/: queue.hbs  scheduler.cbs  scheduler.hbs
libcbs/src/string/: string.cbs  string.hbs
libcbs/src/vec/: vec.hbs
libcbs/test/: CMakeLists.txt
libcbs/test/bishengc_safety/: CMakeLists.txt  bishengc_safety_test.cbs
libcbs/test/cell/: CMakeLists.txt  cell_for_copy_type.cbs  refcell_deref.cbs  refcell_try_borrow.cbs
libcbs/test/list/: CMakeLists.txt  list_list.cbs  test_list.cbs
libcbs/test/map/: CMakeLists.txt  test_map.cbs
libcbs/test/rc/: CMakeLists.txt  rc_deref.cbs  rc_or_weak_is_field_in_struct.cbs  ref_count_check.cbs  weak_circular_reference.cbs  weak_tree.cbs  weak_upgrade.cbs
libcbs/test/scheduler/: CMakeLists.txt  scheduler_test.cbs
libcbs/test/string/: CMakeLists.txt  string_test.cbs
libcbs/test/vec/: CMakeLists.txt  vec_test.cbs
llvm/: CMakeLists.txt
llvm/projects/: CMakeLists.txt
llvm/runtimes/: CMakeLists.txt
(+1202 files in other folders)
